<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pencak Silat</string>
    <string name="title_activity_tahapan">TahapanActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_mian">MianActivity</string>
    <string name="tab1">Teknik Dasar dan Jurus</string>
    <string name="tab2">Pernafasan</string>
    <string name="tab3">Tenaga Dalam</string>
    <string name="tab4">Penggunaan Tenaga Dalam</string>
    <string name="awal"> Dalam Tekhnik Pencat silat terdapat beberapa gerakan yang perlu dikuasai oleh seorang pesilat. Sikap atau gerakan ini meliputi tujuh : Kuda - Kuda, Sikap Pasang, Latihan Langkah Kuda-kuda Silat Menggunakan 8 Arah Mata Angin, Pola Langkah, Pukulan, Tendangan, dan Tangkisan. Berikut ini penjelasannya:</string>
    <string name="kuda">Kuda-kuda</string>
    <string name="terdiri_dari">Teknik kuda-kuda pada pencak silat terdiri dari enam posisi yaki: kuda-kuda Depan, kuda-kuda Belakang, kuda-kuda Tengah, kuda-kuda Samping, kuda-kuda Silang Depan, dan kuda-kuda Silang Belakang.</string>
    <string name="kudkud">1. Kuda-Kuda Depan </string>
    <string name="yyyy">- Kuda-kuda depan dapat dibentuk dengan posisi kaki yang berada di depan ditekuk sedangkan kaki belakang lurus. Sementara itu, telapak kaki belakang serong ke arah luar, berat badan ditumpukan pada kaki depan, badan tegap dan pandangan kedepan. </string>
    <string name="kudakud">2. Kuda-Kuda Belakang </string>
    <string name="aaaa"> - Untuk kuda-kuda belakang, dapat dibentuk dengan tumpuan berat badan  pada kaki belakang. Tumit yang dipakai sebagai tumpuan tegak dengan panggul, badan agak condong ke depan, kaki depan di injit dan menapak dengan tumit atau ujung kaki.</string>
    <string name="bbbb">3. Kuda-Kuda Tengah</string>
    <string name="cccc">- Dibentuk dengan kedua kaki ditekukan dengan titik berat badan berada ditengah.</string>
    <string name="dddd">4. Kuda-kuda samping </string>
    <string name="eeee">- Lakukan Kuda-kuda samping dengan cara satu kaki ditekuk dan kaki yang lain lurus ke samping, berat badan pada kaki yang ditekuk, bahu sejajar atau segaris dengan kaki. </string>
    <string name="ffff">5. Kuda-Kuda Silang Depan </string>
    <string name="gggg">- Kuda-kuda silang depan dibentuk dengan menginjakkan satu kaki ke depan atau kebelakang kaki yang lain, berat badan ditumpukan pada satu kaki, sedangkan kaki yang lain disentuhkan pada lantai dengan ibu jari kaki atau ujung jari kaki.</string>
    <string name="hhhh">6. Kuda-Kuda Silang Belakang </string>
    <string name="iiii">- Kuda-kuda silang belakang  yaitu kuda-kuda dengan salah satu kaki berada di belakang  dengan keadaan menyilang dan kaki di tumpukan ke belakang, badan tetap lurus agar tidak jatuh saat melakukan  gerakan tersebut.</string>
    <string name="jjjj">Sikap Pasang</string>
    <string name="kkkk">Terdapat empat sikap pasang yang ada dalam pencak silat: yakni Pasang satu,Pasang dua, Pasang tiga, dan Pasang empat. Berikut ini penjelasannya. </string>
    <string name="llll">1. Pasang satu </string>
    <string name="mmmm">- Pasang satu adalah sikap dengan posisi badan tegak dengan kedua tangan disamping dalam keadaan siap silat dan kedua kaki di buka selebar bahu.</string>
    <string name="nnnn">2. Pasang dua </string>
    <string name="oooo">- Pasng dua dibentuk dengan badan tetap pada posisi tegak, kaki dibuka selebar bahu, kedua  tangan mengepal dan sejajar pinggang.</string>
    <string name="pppp">3. Pasang tiga </string>
    <string name="qqqq">- Sikap badan sama seperti pasang dua dengan posisi tegak lurus, kaki di buka selebar bahu, tangan diangkat sejajar mata dengan kepalan tangan terbuka.</string>
    <string name="rrrr">4. Pasang empat</string>
    <string name="ssss">- Sikap badan, dan mata sama seperti sikap pasang tiga, yang membedakan adalah tangan diangkat sejajar mata dengan posisis silang. Awalnya kepalan tangan terbuka kemudian tangan sudah terkepal.</string>
    <string name="tttt">Latihan Langkah Kuda-kuda Silat Menggunakan 8 Arah Mata Angin</string>
    <string name="uuuu">Terdapat delapan gerakan yang dilakukan dalam Latihan Langkah Kuda-kuda Silat Menggunakan 8 Arah Mata Angin, berikut ini penjelasan lengkapnya.</string>
    <string name="vvvv">• Pada gerakan awal yaitu dimulai dengan gerakkan pertama sampai gerakkan ke empat menggunakan kuda-kuda samping, yaitu kaki kiri di depan kaki kanan di belakang posisi badan dalam keadaan lurus, kaki kiri di depan kaki kanan di belakang posisi dalam keadaan serong kekiri dan begitu juga sebaliknya.</string>
    <string name="wwww">• Kemudian dilanjutkan dengan gerakan tambahan yaitu gerakkan ke lima sampai gerakkan ke delapan dengan menggunakan kaki dapan di depan dan kaki kiri di belakang keadaan dalam posisi kaki kiri di luruskan dan kaki kanan ditekukkan posisi badan sedikit condong ke depan dan begitu juga sebaliknya
</string>
    <string name="xxxx">Pola Langkah</string>
    <string name="yyyyy">Ada enam pola langkah dalam teknih pencak silat yaitu: Pola langkah lurus, Pola langkah zikzak, Pola langkah ladam atau huruf  U, Pola langkah segi tiga, Pola langkah huruf S, dan Pola langkah segi 4. Berikut ini penjelasannya.</string>
    <string name="zzzz">1. Pola langkah lurus </string>
    <string name="abcd">- Merupakan gerak langkah yang membentuk garis lurus ,baik langkah maju maupin langkah mundur. Pelaksanaanya dimulai dari salah satu kuda-kuda (kuda-kuda tengah).</string>
    <string name="bbbq">Teknik Pernafasan </string>
    <string name="bbbr">Setelah kita mempelajari teknik Kuda-Kuda, kali ini kita akan membahas mengenai teknik pernafasan.  Setiap perguruan Pencak Silat memiliki teknik pernafasan yang berbeda-beda, namun jika dilihat dari prinsip dasarnya adalah sama yaitu menggunakan Teknik Pernafasan Dada dan Teknik Pernafasan Perut.</string>
    <string name="bbbs">1. Teknik Pernafasan Dada</string>
    <string name="bbbu">2. Teknik Pernafasan Perut</string>
    <string name="bbbv">Pernafasan ini berbeda dengan pernafasan sebelumnya. Pada pernafasan ini nafas ditekan pada bagian perut, sehingga otot perut mengeras. Cara melakukannya adalah, tarik nafas melalui hidung,tahan nafas di perut dengan menggembungkan perut bagian bawah, sehingga jika ditekan dari depan perut tidak akan mengempes, untuk melepaskan nafas buang nafas melalui mulut dengan cara mendesis seperti pada pernafasan dada.  Pernafasan perut ini sangat penting dikuasai oleh semua pesilat, karena ini adalah pernafasan dasar dari semua pernafasan.</string>
    <string name="bbbw">Selain 2 pernafasan diatas ada 2 pernafasan lagi yang tinggkatnya diatas Pernafasan Dada dan Pernafasan Perut. (sebelum belajar pernafasan ini, wajib menguasai 2 pernafasan diatas).  Bagi yang sudah menguasai 2 pernafasan diatas, maka untuk menguasai pernafasan di bawah ini tidak terlalu sulit.</string>
    <string name="bbbx">A. Pernafasan Ulu Hati</string>
    <string name="bbby">Pernafasan ini sangat penting dikuasai, karena jika kita berhasil mengunci pernafasan ini, semua badan akan terasa kencang dan keras. Pada pernafasan ini nafas dikunci di ulu hati, yaitu daerah antara dada dan perut. Jika kita berhasil mengunci nafas di ulu hati maka secara tidak langsung dada dan perut pun akan ikut mengunci dan terasa keras.</string>
    <string name="bbbz">B. Pernafasan Dibawah Pusar</string>
    <string name="ccca">     Pada pernafasan ini nafas dikunci dibawah pusar (kandung kemih). Pernafasan ini berlawanan dengan pernafasan Dada, jika pernafasan dada berguna untuk meningkatkan emosi, maka pernafasan ini bertujuan untuk mengontrol emosi kita. Pada pernafasan ini daerah dibawah pusar ditekan keluar sehingga akan terasa keras. Pernafasan ini banyak manfaatnya seperti meningkatkan energi yang ada di dalam tubuh kita.</string>
    <string name="cccb">Bagi yang sudah menguasai pernafasan diatas, maka sudah layak untuk masuk ke materi selanjutnya.</string>
    <string name="fffq">Karena pencak silat mulai berkembang seiring berjalannya waktu, maka mulai terbentuklah berbagai organisasi pencak silat yang di antaranya:</string>
    <string name="fffr">- PERSILAT (Persekutuan Pencak Silat Antara Bangsa)</string>
    <string name="ffft">FP2STI merupakan suatu wadah silahturahmi orang-orang yang berempati terhadap perkembangan Silat Tradisi. FP2ST suatu wadah informal yang tidak berafiliasi dengan organisasi manapun, dan bersifat cair (mewadahi semua golongan).
</string>
    <string name="fffu">Ikatan Pencak Silat Indonesia (disingkat IPSI) adalah induk organisasi resmi pencak silat di Indonesia di bawah naungan KONI (Komite Olahraga Nasional Indonesia). Pencak silat merupakan olahraga seni beladiri yang berasal dari bangsa Melayu, termasuk Indonesia. Jumlah perguruan pencak silat sangat banyak, berdasarkan catatan PB IPSI sampai dengan tahun 1993 telah mencapai 840 perguruan pencak silat di Indonesia. Induk organisasi pencak silat di Indonesia adalah IPSI (Ikatan Pencak Silat Indonesia). IPSI didirikan pada tanggal 18 Mei 1948 di Surakarta, Jawa Tengah.</string>
    <string name="fffv">PERSILAT dikelola secara kolektif oleh sebuah Presidium yang terdiri dari 69 anggota. Eddie M. Nalapraya ditetapkan sebagai Ketua Presidium. Tugas Presidium adalah antara lain menyelenggarakan Kongres PERSILAT. Kongres yang pertama diselenggarakan oleh Presidium pada tahun 1983 di Kuala Lumpur. Asas PERSILAT adalah persaudaraan, kekeluargaan, persatuan dan menghormati satu sama lain serta tidak membeda-bedakan kebangsaan dan agama. PERSILAT adalah organisasi non-politik.
</string>
    <string name="fffw">Persekutuan Silat Kebangsaan Malaysia (PESAKA) didirikan pada 24 September 1983, dalam usaha mewujudkan satu organisasi Persilatan di Malaysia pada saat itu terdapat 4 Pertubuhan Peringkat Malaysia yaitu: Seni Silat Lincah Malaysia, Silat Seni Gayong Malaysia, Seni Gayung Fatani Malaysia dan Seni Silat Cekak Malaysia beserta 16 buah PESAKA Negeri (Perlis, Kedah, Pulau Pinang, Perak, Selangor, Kuala Lumpur, Negeri Sembilan, Melaka, Johor, Pahang, Terengganu, Kelantan, Sarawak, Sabah, Labuan dan Putrajaya) yang bergabung. Kini dianggarkan seramai 4 juta ahli-ahli silat di seluruh Malaysia.</string>
    <string name="fffx">Singapore Silat Federation adalah salah satu anggota pendiri untuk PERSILAT, dan salah satu negara yang terlibat secara langsung dan aktif untuk memastikan olahraga berhasil terorganisir dengan baik di seluruh dunia.</string>
    <string name="fffy">European Pencak Silat Federation (EPSF) adalah badan resmi untuk Pencak Silat di Eropa dan merupakan perwakilan PERSILAT (Persekutuan Pencak Silat Antarabangsa), badan dunia untuk Pencak Silat yang berbasis di Jakarta, Indonesia.</string>
    <string name="fffz">Pencak silat diperkirakan menyebar di Kepulauan Nusantara pada abad ke-7 Masehi. Saat ini, pencak silat telah diakui sebagai budaya suku Melayu, yaitu para penduduk daerah pesisir Pulau Sumatra dan Semenanjung Malaka, serta kelompok etnik lainnya yang menggunakan lingua franca bahasa Melayu.
</string>
    <string name="ggga">Di berbagai daerah di pulau-pulau Jawa, Bali, Kalimantan, dan Sulawesi, telah mengembangkan silat tradisional</string>
    <string name="gggb">Penyebaran agama Islam pada abad ke-14 di Nusantara telah diajarkan bersamaan dengan silat. Silat berkembang dari ilmu beladiri dan seni tari rakyat yang menjadi bagian dari latihan spiritual.</string>
    <string name="gggc">Selanjutnya, perkembangan silat didorong oleh para ahli beladiri dari keraton serta para pendekar silat lainnya, yang legenda kehebatan ilmunya banyak tersebar di seantero wilayah nusantara. Sebagai contoh, bangsa Melayu terutama di Semenanjung Malaka meyakini legenda bahwa Hang Tuah dari abad ke-14 merupakan pendekar silat yang terhebat</string>
</resources>